# filedialpy

./: README.md  pyproject.toml
filedialpy/: __init__.py  linux_kdialog.py  linux_tkinter.py  linux_zenity.py  mac.py  windows.py
